--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "vite": "^7.2.4"
+    "sharp": "^0.34.5",
+    "vite": "^7.2.4",
+    "vite-plugin-image-optimizer": "^2.0.3"
   }
 }
